syntax = "proto3";

option csharp_namespace = "FreeRP.Plugins";

package plugin;

message FrpPlugin {
    string plugin_id = 1;
    string name = 2;
    string description = 3;
	string authors = 4;
	string license_url = 5;
	string project_url = 6;
	string update_url = 7;
	string icon_url = 8;
	string version = 9;
    bool external = 10;
    string external_url = 11;
    repeated FrpPluginTranslation translation = 12;
}

message FrpPluginTranslation {
    //ISO language. (en, en-us, en-gb)
	string language = 1;
    string name = 2;
    string description = 3;
}

message FrpMemberUsePlugin {
    string member_use_plugin_id = 1;
    string plugin_id = 2;
    string member_id = 3;
    bool member_is_user = 4;
}

message PluginData {
    FrpPlugin plugin = 1;
}

message PluginRole {
    string plugin_id = 1;
    string role_id = 2;
}
